修改了文档的架构-调整打包的base路径

--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="一个好用的UI框架">
     
-    <link rel="preload" href="/Guli/assets/css/0.styles.312534fc.css" as="style"><link rel="preload" href="/Guli/assets/js/app.5af25c79.js" as="script"><link rel="preload" href="/Guli/assets/js/7.eaa60d82.js" as="script"><link rel="prefetch" href="/Guli/assets/js/10.21b1d4ca.js"><link rel="prefetch" href="/Guli/assets/js/11.9ee32bb5.js"><link rel="prefetch" href="/Guli/assets/js/2.cbc127cf.js"><link rel="prefetch" href="/Guli/assets/js/3.c03fea23.js"><link rel="prefetch" href="/Guli/assets/js/4.f3063934.js"><link rel="prefetch" href="/Guli/assets/js/5.867eea43.js"><link rel="prefetch" href="/Guli/assets/js/6.d01c73fa.js"><link rel="prefetch" href="/Guli/assets/js/8.a20e092e.js"><link rel="prefetch" href="/Guli/assets/js/9.6b98b0cc.js">
-    <link rel="stylesheet" href="/Guli/assets/css/0.styles.312534fc.css">
+    <link rel="preload" href="/gulidocs/assets/css/0.styles.715bf914.css" as="style"><link rel="preload" href="/gulidocs/assets/js/app.7aa2bb1e.js" as="script"><link rel="preload" href="/gulidocs/assets/js/7.eaa60d82.js" as="script"><link rel="prefetch" href="/gulidocs/assets/js/10.21b1d4ca.js"><link rel="prefetch" href="/gulidocs/assets/js/11.ff84205d.js"><link rel="prefetch" href="/gulidocs/assets/js/2.cbc127cf.js"><link rel="prefetch" href="/gulidocs/assets/js/3.c03fea23.js"><link rel="prefetch" href="/gulidocs/assets/js/4.5123402e.js"><link rel="prefetch" href="/gulidocs/assets/js/5.13f3e3f2.js"><link rel="prefetch" href="/gulidocs/assets/js/6.d01c73fa.js"><link rel="prefetch" href="/gulidocs/assets/js/8.7ac7ea4e.js"><link rel="prefetch" href="/gulidocs/assets/js/9.dc974d01.js">
+    <link rel="stylesheet" href="/gulidocs/assets/css/0.styles.715bf914.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/Guli/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/gulidocs/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/Guli/assets/js/app.5af25c79.js" defer></script><script src="/Guli/assets/js/7.eaa60d82.js" defer></script>
+    <script src="/gulidocs/assets/js/app.7aa2bb1e.js" defer></script><script src="/gulidocs/assets/js/7.eaa60d82.js" defer></script>
   </body>
 </html>
